@@ -4,6 +4,9 @@
 
 --------------------------------------------------------------------------
   v.3.4-Alpha2 
+  	- Fixed a potential PHP error when browsing the last page or a 
+		search with 0 results
+  	- Fixed rating search method
   	- Added 'Buy This Track' link on Find Missing Tracks if a purchase
 		url is given in the returned data
   	- Reduced # of pages at any one point on browse pages and tweaked
